--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   border-top-left-radius: 0.3rem;
   border-top-right-radius: 0.3rem;
   padding: 0.5rem 0rem;
+  margin-bottom: 1rem;
 }
 
 .mr-auto {
@@ -30,7 +31,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
 }
 
 .dishList {
@@ -41,29 +41,31 @@
 
 }
 
-.dishCardContainer {
+.dishCardsContainer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   max-width: 100%;
   justify-content: center;
-  border: 1px solid green;
+
 }
 
 .dishCard {
+  width: 12rem;
   display: flex;
   flex-wrap: wrap;
-  flex-shrink: 1;
-  border: 1px dotted red;
   background-color: aliceblue;
-  max-width: 18em;
   margin: 0.5rem;
-  min-height: 12rem;
+  min-height: 14rem;
 }
 
 .dishCardTitle {
   color: #0C6FFF;
-  font-size: large;
+  font-size: larger;
+}
+
+.dishCardText {
+  color: #8B8DBA;
 }
 
 /* inputfields */
