--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin-bottom: 1rem;
 }
 
 code {
