meal plan list spaces fixed
update nodepackages, meal plan list spaces fixed, deploy

--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,6 @@
   flex-direction: column;
   margin-top: 1em;
   margin-bottom: 1em;
-  background-color: aliceblue;
 }
 
 .dishListCard {
@@ -66,6 +65,7 @@
   min-height: fit-content;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .dishListCardTitle {
@@ -194,7 +194,7 @@ input:hover, select:hover {
     width: 100%; /* Use full width of the screen */
     justify-content: flex-start; /* Top-aligned content */
     align-items: flex-start; /* Left-aligned content */
-    background-color: white;
+    background-color: none;
   }
     
   .dishCardsContainer {
@@ -209,14 +209,12 @@ input:hover, select:hover {
     flex-wrap: wrap;
     min-height: 8em;
     margin: 0.5em;
- 
   }
 
   .dishCard:hover {
     transform: none;
     transition: none;
   }
-
   }
 
 
